# ev_charge_testcase_generator

./: .gitignore  AGENTS.md  README.md  pyproject.toml
data/: entity_dict.json  samples.json  semantic_dataset_seed.jsonl
data/action_sets/: dc_action_set.json  dc_action_set.xlsx
data/message_field_knowledge/: dc_message_fields.json
data/semantic_dataset/: dev.jsonl  encoded_dev.jsonl  encoded_test.jsonl  encoded_train.jsonl  label_vocab.json  split_summary.json  test.jsonl  train.jsonl
data/sequence_knowledge/: ac_charging_sequence.json  dc_charging_sequence.json
docs/: executable_testcase_schema.md  gui_test_sentences.md  ml_experiment_summary_2026-05-16.md  semantic_event_rules.md  semantic_label_schema.md
evaluation/: README.md  eval_dataset.json  evaluate_executable_generation.py  evaluate_extraction.py  evaluate_generation.py  executable_generation_results.json  extraction_baseline_results.json  extraction_results.json  generation_results.json
examples/: demo.py  gui_tool.py  semantic_demo.py
scripts/: build_semantic_seed_dataset.py  regenerate_executable_gold.mjs  validate_semantic_dataset.py
src/ev_charge_testcase_generator/: __init__.py  (+17 more)
tests/: test_action_set_loader.py  test_evaluation.py  test_executable_generator.py  test_exporter.py  test_extractor.py  test_message_field_knowledge.py  test_ml_dataset.py  test_ml_torch_pipeline.py  test_models.py  test_pipeline.py  test_rule_improvements.py  test_semantic_events.py  test_semantic_extraction_factory.py  test_semantic_extractor.py  test_sequence_expander.py  test_sequence_knowledge.py
(+12 files in other folders)
