[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ev-charge-testcase-generator"
version = "0.1.0"
description = "新能源汽车充电测试用例自动生成原型系统"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Research Prototype" }
]
dependencies = [
  "openpyxl>=3.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0"
]
ml = [
  "torch>=2.0",
  "transformers>=4.40",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "tqdm>=4.66"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_classes = ["*Tests"]
addopts = ["-p", "no:cacheprovider"]
